--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "devDependencies": {
     "gh-pages": "^0.11.0",
-    "react-scripts": "0.7.0"
+    "react-scripts": "0.7.0",
+    "webpack-validator": "^2.2.9"
   },
   "jest": {
     "testEnvironment": "node",
@@ -26,7 +27,11 @@
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.6",
     "react-dom": "^15.3.2",
+    "react-gmaps": "^1.5.0",
+    "react-here-maps": "^0.3.3",
+    "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.7",
     "redux": "^3.6.0"
   },
   "scripts": {
