--- a/package.json
+++ b/package.json
@@ -4,32 +4,21 @@
   "homepage": "http://ryananglem.github.io/london-bike-maps",
   "private": true,
   "devDependencies": {
+    "enzyme": "^2.6.0",
     "gh-pages": "^0.11.0",
+    "react-addons-test-utils": "^15.4.0",
     "react-scripts": "0.7.0",
     "webpack-validator": "^2.2.9"
   },
-  "jest": {
-    "testEnvironment": "node",
-    "collectCoverageFrom": [
-      "src/*.js"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 100,
-        "functions": 50,
-        "lines": 33,
-        "statements": 25
-      }
-    }
-  },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "enzyme": "^2.6.0",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.6",
     "react-dom": "^15.3.2",
     "react-gmaps": "^1.5.0",
-    "react-here-maps": "^0.3.3",
     "react-redux": "^4.4.5",
+    "react-redux-multilingual": "^1.0.2",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0"
@@ -37,7 +26,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom --coverage",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "deploy": "gh-pages -d build"
   }
