--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^15.3.2",
     "react-gmaps": "^1.5.0",
     "react-redux": "^4.4.5",
+    "react-redux-i18n": "^0.1.0",
     "react-redux-multilingual": "^1.0.2",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
