--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-redux-multilingual": "^1.0.2",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-form": "^6.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
