--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
-    "redux-form": "^6.2.0"
+    "redux-form": "^6.2.0",
+    "redux-thunk": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
