--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "private": true,
   "devDependencies": {
     "enzyme": "^2.6.0",
+    "fetch-mock": "^5.5.0",
     "gh-pages": "^0.11.0",
+    "jest-fetch-mock": "^1.0.6",
     "react-addons-test-utils": "^15.4.0",
     "react-scripts": "0.7.0",
+    "redux-mock-store": "^1.2.1",
     "webpack-validator": "^2.2.9"
   },
   "dependencies": {
