--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "enzyme": "^2.6.0",
-    "react": "^15.3.2",
+    "react": "^15.4.1",
+    "react-addons-update": "^15.4.1",
     "react-bootstrap": "^0.30.6",
-    "react-dom": "^15.3.2",
+    "react-dom": "^15.4.1",
     "react-gmaps": "^1.5.0",
-    "react-redux": "^4.4.5",
+    "react-redux": "^4.4.6",
     "react-redux-i18n": "^0.1.0",
     "react-redux-multilingual": "^1.0.2",
     "react-router": "^3.0.0",
