--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux-multilingual": "^1.0.2",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
+    "react-select": "^1.0.0-rc.2",
     "redux": "^3.6.0",
     "redux-form": "^6.2.0",
     "redux-thunk": "^2.1.0"
