--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "enzyme": "^2.6.0",
     "react": "^15.4.1",
     "react-addons-update": "^15.4.1",
+    "react-autosuggest": "^7.0.1",
     "react-bootstrap": "^0.30.6",
     "react-dom": "^15.4.1",
     "react-gmaps": "^1.5.0",
