--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
     "react-select": "^1.0.0-rc.2",
+    "react-simple-pie-chart": "^0.4.0",
     "redux": "^3.6.0",
     "redux-form": "^6.2.0",
     "redux-thunk": "^2.1.0"
