--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,10 @@
-npm test
-
-npm run deploy
+language: node_js
+node_js:
+  - 4
+  - 6
+cache:
+  directories:
+    - node_modules
+script:
+  - npm test
+  - npm run deploy
