--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,11 @@ cache:
     - node_modules
 script:
   - npm test
-  - npm run deploy
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN  # Set in travis-ci.org dashboard, marked secure
+  keep-history: true
+  on:
+    branch: master
+  
