--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "devDependencies": {
     "enzyme": "^2.6.0",
     "fetch-mock": "^5.5.0",
-    "gh-pages": "^0.11.0",
+    "gh-pages": "^1.1.0",
     "jest-fetch-mock": "^1.0.6",
     "react-addons-test-utils": "^15.4.0",
     "react-scripts": "1.1.0",
@@ -19,7 +19,6 @@
     "enzyme": "^2.6.0",
     "prop-types": "^15.6.0",
     "react": "^15.4.1",
-    "react-addons-update": "^15.4.1",
     "react-autosuggest": "^7.0.1",
     "react-bootstrap": "^0.30.6",
     "react-dom": "^15.4.1",
@@ -27,8 +26,9 @@
     "react-redux": "^4.4.6",
     "react-redux-i18n": "^0.1.0",
     "react-redux-multilingual": "^1.0.2",
-    "react-router": "^3.0.0",
-    "react-router-redux": "^4.0.7",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^4.0.8",
     "react-select": "^1.0.0-rc.2",
     "react-simple-pie-chart": "^0.4.0",
     "redux": "^3.6.0",
