update(react): update react modules and fix tests resulting from breaking change

--- a/package.json
+++ b/package.json
@@ -5,23 +5,22 @@
   "homepage": "http://ryananglem.github.io/london-bike-maps",
   "private": true,
   "devDependencies": {
-    "enzyme": "^2.6.0",
     "fetch-mock": "^5.5.0",
     "gh-pages": "^1.1.0",
     "jest-fetch-mock": "^1.0.6",
-    "react-addons-test-utils": "^15.4.0",
     "react-scripts": "1.1.0",
     "redux-mock-store": "^1.2.1",
     "webpack-validator": "^2.2.9"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "enzyme": "^2.6.0",
+    "enzyme": "^3.3.0",
     "prop-types": "^15.6.0",
-    "react": "^15.4.1",
+    "react": "^16.2.0",
+    "react-addons-test-utils": "^15.6.2",
     "react-autosuggest": "^7.0.1",
-    "react-bootstrap": "^0.30.6",
-    "react-dom": "^15.4.1",
+    "react-bootstrap": "^0.32.1",
+    "react-dom": "^16.2.0",
     "react-gmaps": "^1.5.0",
     "react-redux": "^4.4.6",
     "react-redux-i18n": "^0.1.0",
@@ -29,10 +28,10 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
-    "react-select": "^1.0.0-rc.2",
     "react-simple-pie-chart": "^0.4.0",
+    "react-test-renderer": "^16.2.0",
     "redux": "^3.6.0",
-    "redux-form": "^6.2.0",
+    "redux-form": "^7.2.1",
     "redux-thunk": "^2.1.0"
   },
   "scripts": {
