chore(readme) tidy readme and add lint editor extension settings

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ cache:
   directories:
     - node_modules
 script:
-  - yarn test
+  - yarn test -- --coverage
 #  - npm run build
 #deploy:
 #  provider: pages
