--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.projectVersion=1.0
 sonar.sources=./src
 
 # Exclusions
-sonar.exclusions=**/*.spec.js,**/*.spec.jsx,**/__mocks__/*
+sonar.exclusions=**/*.test.js, **/*.test.jsx, **/*.spec.js,**/*.spec.jsx,**/__mocks__/*
 
 # Coverage reporting
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
