--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.projectVersion=1.0
 sonar.sources=./src
 
 # Exclusions
-sonar.exclusions=**/*.test.js, **/*.test.jsx, ./src/api/static-data/**.*
+sonar.exclusions=**/*.test.js, **/*.test.jsx, src/api/static-data/*.*
 
 # Coverage reporting
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
