--- a/package.json
+++ b/package.json
@@ -40,5 +40,16 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "deploy": "gh-pages -d build"    
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}",
+      "!node_modules/",
+      "!src/index.js",
+      "!src/App.js",
+      "!src/translations.js",
+      "!src/reducers/testReducer.js",
+      "!src/reducers/rootReducer.js"
+    ]
   }
 }
