--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "homepage": "http://london-bike-maps.s3-website.eu-west-2.amazonaws.com",
   "private": true,
   "devDependencies": {
+    "@storybook/react": "^5.1.9",
+    "eslint-config-prettier": "^6.0.0",
     "fetch-mock": "^5.5.0",
     "gh-pages": "^1.1.0",
     "jest-fetch-mock": "^1.0.6",
-    "react-scripts": "1.1.0",
+    "react-scripts": "2.1.8",
     "redux-mock-store": "^1.2.1",
     "webpack-validator": "^2.2.9"
   },
@@ -31,7 +33,6 @@
     "react-simple-pie-chart": "^0.4.0",
     "react-test-renderer": "^16.2.0",
     "redux": "^3.6.0",
-    "redux-form": "^7.2.1",
     "redux-thunk": "^2.1.0"
   },
   "scripts": {
@@ -39,8 +40,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build"
+    "storybook": "start-storybook"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -52,5 +52,11 @@
       "!src/reducers/testReducer.js",
       "!src/reducers/rootReducer.js"
     ]
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
