--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "fetch-mock": "^5.5.0",
     "gh-pages": "^1.1.0",
     "jest-fetch-mock": "^1.0.6",
+    "prettier": "1.18.2",
     "react-scripts": "2.1.8",
     "redux-mock-store": "^1.2.1",
     "webpack-validator": "^2.2.9"
@@ -40,7 +41,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "storybook": "start-storybook"
+    "storybook": "start-storybook",
+    "lint:pretty": "prettier --check 'src/**/*.js'"
   },
   "jest": {
     "collectCoverageFrom": [
