--- a/package.json
+++ b/package.json
@@ -1,64 +1,67 @@
 {
-  "name": "london-bike-maps",
-  "version": "0.1.1",
-  "author": "Ryan Anglem",
-  "homepage": "http://london-bike-maps.s3-website.eu-west-2.amazonaws.com",
-  "private": true,
-  "devDependencies": {
-    "@storybook/react": "^5.1.9",
-    "eslint-config-prettier": "^6.0.0",
-    "fetch-mock": "^5.5.0",
-    "gh-pages": "^1.1.0",
-    "jest-fetch-mock": "^1.0.6",
-    "prettier": "1.18.2",
-    "react-scripts": "2.1.8",
-    "redux-mock-store": "^1.2.1",
-    "webpack-validator": "^2.2.9"
-  },
-  "dependencies": {
-    "bootstrap": "^3.3.7",
-    "enzyme": "^3.3.0",
-    "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-addons-test-utils": "^15.6.2",
-    "react-autosuggest": "^9.0.1",
-    "react-bootstrap": "^0.32.1",
-    "react-dom": "^16.2.0",
-    "react-gmaps": "^1.5.0",
-    "react-redux": "^4.4.6",
-    "react-redux-i18n": "^0.1.0",
-    "react-redux-multilingual": "^1.0.2",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-router-redux": "^4.0.8",
-    "react-simple-pie-chart": "^0.4.0",
-    "react-test-renderer": "^16.2.0",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook",
-    "lint:pretty": "prettier --check 'src/**/*.{js,jsx}'"
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx}",
-      "!node_modules/",
-      "!src/index.js",
-      "!src/App.js",
-      "!src/translations.js",
-      "!src/reducers/testReducer.js",
-      "!src/reducers/rootReducer.js"
+    "name": "london-bike-maps",
+    "version": "0.1.1",
+    "author": "Ryan Anglem",
+    "homepage": "http://london-bike-maps.s3-website.eu-west-2.amazonaws.com",
+    "private": true,
+    "devDependencies": {
+        "@storybook/react": "^5.1.9",
+        "cypress": "^3.3.2",
+        "eslint-config-prettier": "^6.0.0",
+        "fetch-mock": "^5.5.0",
+        "gh-pages": "^1.1.0",
+        "jest-fetch-mock": "^1.0.6",
+        "prettier": "1.18.2",
+        "react-scripts": "2.1.8",
+        "redux-mock-store": "^1.2.1",
+        "webpack-validator": "^2.2.9"
+    },
+    "dependencies": {
+        "bootstrap": "^3.3.7",
+        "enzyme": "^3.3.0",
+        "prop-types": "^15.6.0",
+        "react": "^16.2.0",
+        "react-addons-test-utils": "^15.6.2",
+        "react-autosuggest": "^9.0.1",
+        "react-bootstrap": "^0.32.1",
+        "react-dom": "^16.2.0",
+        "react-gmaps": "^1.5.0",
+        "react-redux": "^4.4.6",
+        "react-redux-i18n": "^0.1.0",
+        "react-redux-multilingual": "^1.0.2",
+        "react-router": "^4.2.0",
+        "react-router-dom": "^4.2.2",
+        "react-router-redux": "^4.0.8",
+        "react-simple-pie-chart": "^0.4.0",
+        "react-test-renderer": "^16.2.0",
+        "redux": "^3.6.0",
+        "redux-devtools-extension": "^2.13.8",
+        "redux-thunk": "^2.1.0"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jsdom",
+        "test:e2e": "cypress open --config baseUrl=http://localhost:3000",
+        "eject": "react-scripts eject",
+        "storybook": "start-storybook",
+        "lint:pretty": "prettier --check 'src/**/*.{js,jsx}'"
+    },
+    "jest": {
+        "collectCoverageFrom": [
+            "src/**/*.{js,jsx}",
+            "!node_modules/",
+            "!src/index.js",
+            "!src/App.js",
+            "!src/translations.js",
+            "!src/reducers/testReducer.js",
+            "!src/reducers/rootReducer.js"
+        ]
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
     ]
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
 }
